--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,5 @@ twitter_username: rainedoescode # DO NOT include the @ character, or else the bu
 github_username:  rainealexander # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+
+theme: minima
